// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`stylish formatter should generate output 1`] = `
"</>
<underline>first.html</underline>
  <dim>1:6</intensity>  <red>error</color>    An error   <dim>foo</intensity>
  <dim>2:5</intensity>  <yellow>warning</color>  A warning  <dim>bar</intensity>

<underline>second.html</underline>
  <dim>1:4</intensity>  <red>error</color>  Lorem ipsum is not allowed  <dim>no-lorem-ipsum</intensity>

<red><bold>✖ 3 problems (2 errors, 1 warning)
</intensity></color></>
<bold>More information</intensity>:
  https://example.net/rule/foo.html
  https://example.net/rule/bar.html
  https://example.net/rule/no-lorem-ipsum.html

"
`;

exports[`stylish formatter should handle edge cases 1`] = `
"</>
<underline>edge-cases.html</underline>
  <dim>1:1</intensity>  <yellow>warning</color>  Has invalid severity                                      <dim>invalid-severity</intensity>
  <dim>2:2</intensity>  <red>error</color>    Escape <script language="jabbascript"> & <span id='foo'>  <dim>special-characters</intensity>

<red><bold>✖ 2 problems (1 error, 1 warning)
</intensity></color></>"
`;

exports[`stylish formatter should handle empty messages 1`] = `""`;

exports[`stylish formatter should handle empty result 1`] = `""`;

exports[`stylish formatter should handle missing rule url 1`] = `
"</>
<underline>missing-url.html</underline>
  <dim>1:6</intensity>  <red>error</color>    An error   <dim>foo</intensity>
  <dim>2:5</intensity>  <yellow>warning</color>  A warning  <dim>bar</intensity>

<red><bold>✖ 2 problems (2 errors, 0 warnings)
</intensity></color></>"
`;

exports[`stylish formatter should handle missing source 1`] = `
"</>
<underline>missing-source.html</underline>
  <dim>1:6</intensity>  <red>error</color>    An error   <dim>foo</intensity>
  <dim>2:5</intensity>  <yellow>warning</color>  A warning  <dim>bar</intensity>

<red><bold>✖ 2 problems (2 errors, 0 warnings)
</intensity></color></>
<bold>More information</intensity>:
  https://example.net/rule/foo.html
  https://example.net/rule/bar.html

"
`;
